plugins {
    id 'com.android.application'
}

android {
    namespace 'ma.DeviceOptimizeHelper'
    compileSdk 34

    defaultConfig {
        applicationId "ma.DeviceOptimizeHelper"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0.3"

        // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildFeatures{
        aidl true
    }

    applicationVariants.all { variant ->
        variant.outputs.all {
            // 获取应用的版本名
            def versionName = variant.versionName
            outputFileName = "DeviceOptimizeHelper_v${versionName}.apk"
        }
    }



}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'org.lsposed.hiddenapibypass:hiddenapibypass:4.3'
    implementation "io.github.iamr0s:Dhizuku-API:2.4"
}